Fixed navigation scrollbar bug
no refs.
- fixed issue that made top navigation scrollbar appear for sites with secondary navigation and members turned off

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -292,7 +292,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    overflow-y: hidden;
+    overflow: hidden;
     height: 64px;
     font-size: 1.3rem;
 }
